activate voucher
